[project]
name = "review-app-testing"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dan Tenenbaum", email = "dtenenba@fhcrc.org" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.11.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/review_app_testing"]
